--- a/src/PermissionApi/01-Gateway/PermissionGateway/PermissionGateway.csproj
+++ b/src/PermissionApi/01-Gateway/PermissionGateway/PermissionGateway.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Controllers\PermissionsController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
