--- a/src/PermissionApi/01-Gateway/PermissionGateway/appsettings.json
+++ b/src/PermissionApi/01-Gateway/PermissionGateway/appsettings.json
@@ -4,5 +4,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "Permissions": {
+    "kindOfPermission": "Application Access",
+    "Name": "My application" 
+  } 
 }
